	updated the scaler to poll 10 times per second and also accept a
		trigger from the listener to mitigate race conditions that
		can become problematic when connections="0" is used
	added C# and ADO.NET docs and updated windows documentation
	updated the documentation
	added support for waitfordowndatabase config parameter
	applied some odbc fixes from Chae Young-ku

0.45 - added trigger framework
	added support for getting the native database error number
	added support for mapping native error numbers to MySQL error numbers
		for the mysql drop-in replacement library
	renamed all .C files to .cpp for windows
	added msvc projects for sqlrclient, sqlrclientwrapper, sqlrutil and
		sqlrsh and got them all working natively on windows
	updated code so ttl="0" works as expected
	updated code so dynamic scaling of cursors works as expected
	documented dynamic scaling of cursors somewhat
	fixed a few mdbtools errors
	column aliases work as expected now with firebird
	fixed a bug where if an app either enabled or disabled autocommit,
		that could become the default status of autocommit rather than
		what was set in the config file
	added autocommit on/off to sqlrsh
	fixed a bind-var-related memory leak in mysql drop-in lib
	fixed return values in mysql drop-in lib
	updated getTableList() to exclude system tables
	applied Benno Lange's localstatedir patch to fix a case where the
		localstatedir command line parameter wasn't working properly
	applied Renat's listener alarm handling patch 

0.44 - updated postgresql drop-in lib for postgresql 8/9 compatibility
	updated mysql drop-in lib for mysql 5.2+ compatibility
	applied Renat's patch to fix the client session count in the stats
	added getDatabase/Table/ColumnList method/functions to API's
	added string inputBind method/function with length
	added bind variable translation
	added transaction block emulation
	added option to drop temporary tables at session-end for oracle