@@ -221,6 +221,7 @@ const char * const *sqlwriter::baseElements() {
 		sqlparser::_greater_than_or_equal_to,
 		sqlparser::_expression,
 		sqlparser::_interval_qualifier,
+		sqlparser::_outer_join_operator,
 		sqlparser::_compliment,
 		sqlparser::_inverse,
 		sqlparser::_negative,
@@ -578,6 +579,9 @@ bool sqlwriter::handleStart(xmldomnode *node, stringbuffer *output) {
 	} else if (!charstring::compare(nodename,
 				sqlparser::_interval_qualifier)) {
 		return intervalQualifier(node,output);
+	} else if (!charstring::compare(nodename,
+				sqlparser::_outer_join_operator)) {
+		return outerJoinOperator(node,output);
 	} else if (!charstring::compare(nodename,sqlparser::_compliment)) {
 		return compliment(node,output);
 	} else if (!charstring::compare(nodename,sqlparser::_inverse)) {
